# GHMF-Player-2.0

./: COMPARISON.md  ELECTRON_MIGRATION_PLAN.md  INDEX.md  LIGHT_GROUPINGS.md  PROJECT_SUMMARY.md  Playback.sln  ROADMAP.md  RUST_MIGRATION_PLAN.md  UI_REDESIGN_SUMMARY.md
Config/: FCWMap.CSV  GHMFP.pas  Playback.xml
Music/Drone/: Drone - Countdown.ctl  Drone - Position Drone.ctl  Drone - Swap Battery.ctl
Music/Open-Close/: Closing.ctl  Opening test.ctl  Opening.ctl
Music/Playlists/: 2026-01-01_Testing_01-01-2026.playlist  2026-01-11_New_Songs_01-11-2026.playlist  2026-01-11_New_Wave_01-11-2026.playlist  2026-01-11_Other_01-11-2026.playlist  2026-01-12_New_Songs_01-12-2026.playlist  2026-01-12_New_Wave_01-12-2026.playlist  (+13 more)
Playback/: ClassExtensions.cs  InitStatus.Designer.cs  InitStatus.cs  LightControl.Designer.cs  LightControl.cs  LoginForm.cs  LoginForm.designer.cs  Monitor.Designer.cs  Monitor.cs  Monitor.resx  PLCComms.cs  Playback.csproj  PlaybackForm.Designer.cs  PlaybackForm.cs  PlaybackForm.resx  Player.cs  Playlist.cs  Program.cs  ReadMe.txt  Settings.cs  SettingsForm.Designer.cs  SettingsForm.cs  SettingsForm.resx  packages.config
ghmf-playback-electron/: .gitignore  QUICKSTART.md  README.md  electron-builder.json  index.html  package.json  tsconfig.json  vite.config.ts
ghmf-playback-rust/: .gitignore  CONFIG_SYSTEM.md  Cargo.toml  GUI_GUIDE.md  LOGO_INTEGRATION.md  Lights_CTL_Output.txt  PLAYBACK_INTEGRATION.md  QUICKSTART.md  README.md  SHOWCASE.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  tauri.conf.json
ghmf-playback-rust/Config/: ColorMap.csv  DMXMap.csv  custom_fixtures.json  dmx_mapping.json  legacy_colors.json  light_groups.json  lights_layout.json  procedures.json  start_time.json
ghmf-playback-rust/assets/: README.md
ghmf-playback-rust/examples/: test_csv_config.rs
ghmf-playback-rust/src/: lib.rs  main.rs
ghmf-playback-rust/src/audio/: channel_mixer.rs  decoder.rs  mod.rs  player.rs  scrolling_buffer.rs  waveform.rs
ghmf-playback-rust/src/commands/: command.rs  command_file.rs  ctl_file.rs  executor.rs  mod.rs
ghmf-playback-rust/src/config/: csv_config.rs  mod.rs
ghmf-playback-rust/src/dmx/: enttec.rs  mod.rs  sacn_output.rs  universe.rs
ghmf-playback-rust/src/gui/: app.rs  command_panel.rs  dmx_map_panel.rs  legacy_color_panel.rs  light_group_panel.rs  lighting_panel.rs  lights_layout_panel.rs  mod.rs  operator_panel.rs  playback_panel.rs  playlist_panel.rs  procedures_panel.rs  settings_dialog.rs  sidebar.rs  start_time_panel.rs  status_panel.rs  theme.rs
ghmf-playback-rust/src/lighting/: channel.rs  color.rs  fixture_manager.rs  mod.rs
ghmf-playback-rust/src/playlist/: mod.rs
ghmf-playback-rust/src/plc/: mod.rs  plc_client.rs
ghmf-playback-rust/src/utils/: error.rs  logger.rs  mod.rs
(+51 files in other folders)
