[package]
name = "ghmf-playback"
version = "2.0.0"
edition = "2021"
authors = ["City of Grand Haven"]
description = "Cross-platform fountain playback system with synchronized audio and DMX lighting"

[dependencies]
# Audio
rodio = "0.19"
symphonia = "0.5"
cpal = "0.15"

# DMX/Serial
serialport = "4.5"

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
egui_dnd = "0.10"  # Drag and drop helper
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"  # File dialogs

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
crossbeam-channel = "0.5"
dirs = "5.0"
shellexpand = "3.1"

[lib]
name = "ghmf_playback"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
