[package]
name = "ghmf-playback"
version = "2.0.0"
edition = "2021"
authors = ["City of Grand Haven"]
description = "Cross-platform fountain playback system with synchronized audio and DMX lighting"

[dependencies]
# Audio
rodio = "0.19"
symphonia = "0.5"
cpal = "0.15"

# DMX/Serial
serialport = "4.5"

# GUI
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.28", features = ["all_loaders", "image", "svg"] }
egui_plot = "0.28"
egui-notify = "0.15"
egui_tiles = "0.9"
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
egui_dnd = "0.9"

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
crossbeam-channel = "0.5"
dirs = "5.0"
shellexpand = "3.1"

[lib]
name = "ghmf_playback"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
